# akkk-auto-signup

./: Cargo.toml  SignInTrigger.cs  akkk-auto-sign-func.csproj  akkk-auto-sign-func.sln
Properties/: launchSettings.json
src/: activity.rs  main.rs  models.rs
