[package]
name = "akkk-auto-signup"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
dotenvy = "0.15.7"
reqwest = {version = "0.12.7", features = ["json", "cookies"]}
serde = {version = "1.0.209", features = ["derive"]}
serde_json = "1.0.127"
tokio = {version = "1.40.0", features = ["full"]}
